--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outFile": "./dist/jcacheable.js",
         "sourceMap": true,
         "noImplicitAny": false,
-        "module": "commonjs",
+        "module": "amd",
         "target": "es5",
         "allowJs": true,
         "esModuleInterop": true,
