--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "side-cache",
-  "version": "0.0.1",
-  "description": "Cache wrapper for Javascript fucntions! Support Browser and Node.",
+  "version": "0.0.2",
+  "description": "Cache wrapper for Javascript fucntions! Support both Browser & Node.",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent",
     "test-report": "jest --coverage",
+    "test-browser": "parcel test/browser.test.html --dist-dir tmp",
     "prebuild": "rm -rf ./dist",
     "build": "tsc",
     "prepublish": "npm run build"
@@ -15,7 +16,10 @@
     "type": "git",
     "url": "git+https://github.com/foxty/cacheable.git"
   },
-  "keywords": ["side cache", "cache proxy"],
+  "keywords": [
+    "side cache",
+    "cache proxy"
+  ],
   "author": "foxty",
   "license": "Apache License 2.0",
   "bugs": {
@@ -25,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "jest": "^27.1.1",
+    "parcel": "^2.0.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
